--- a/6_5_2_Optimizacion_multiobjetivo.ipynb
+++ b/6_5_2_Optimizacion_multiobjetivo.ipynb
@@ -5,7 +5,46 @@
    "id": "55d02bb0",
    "metadata": {},
    "source": [
-    "## Algoritmo NSGA-II"
+    "# Algoritmo NSGA-II \n",
+    "\n",
+    "\n",
+    "## NGSA\n",
+    "\n",
+    "Its contribution to GAs mainly lies in how the selection process is done too.\n",
+    "\n",
+    "![](https://miro.medium.com/v2/resize:fit:640/format:webp/1*O0HrabCthxRdXR9nHzPrjQ.png)\n",
+    "\n",
+    "### Problemas\n",
+    "\n",
+    "1. High computational complexity of nondominated sorting.\n",
+    "\n",
+    "2. Lack of elitism.\n",
+    "\n",
+    "3. Need for specifying the sharing parameter $\\sigma_{share}$.\n",
+    "\n",
+    "## NGSA-II\n",
+    "\n",
+    "![](https://raw.githubusercontent.com/igomezv/ComputoEvolutivo/main/img/NSGAII.png)\n",
+    "\n",
+    "![](https://i0.wp.com/oklahomaanalytics.com/wp-content/uploads/2017/10/fig4.png)\n",
+    "\n",
+    "![](https://raw.githubusercontent.com/igomezv/ComputoEvolutivo/main/img/crowding.png)\n",
+    "| Step | Description |\n",
+    "| ---- | ----------- |\n",
+    "| **1. Initialization** | Generate an initial population of size `N` and evaluate the population. |\n",
+    "| **2. Fast Non-Dominated Sort** | Rank the population based on non-domination. Solutions that are not dominated by any other are given a rank of 1, solutions that are only dominated by solutions of rank 1 are given a rank of 2, and so on. |\n",
+    "| **3. Crowding Distance Assignment** | For each front obtained from the previous step, calculate the crowding distance of each solution. This gives a measure of the density of solutions surrounding a particular solution in the population. |\n",
+    "| **4. Selection** | Use binary tournament selection, based on rank and crowding distance, to select the parents for the next generation. Solutions with lower rank are preferred, and if two solutions have the same rank, the one with the larger crowding distance is preferred. |\n",
+    "| **5. Crossover and Mutation** | Apply genetic operators to the parents to generate offspring. The crossover operator is used to combine the genetic information of two parents and produce offspring, while the mutation operator is used to introduce variability in the offspring by randomly altering their genetic information. |\n",
+    "| **6. Combine and Evaluate** | Combine the parent and offspring populations. Evaluate the combined population. |\n",
+    "| **7. Fast Non-Dominated Sort (again)** | Perform non-dominated sorting on the combined population. |\n",
+    "| **8. Crowding Distance Assignment (again)** | Assign crowding distances to the individuals in each front of the combined population. |\n",
+    "| **9. Selection for Next Generation** | Fill the next generation with individuals from the various fronts of the combined population, starting with the first front (rank 1). If the size of the next generation is reached before a front is completely included, use crowding distance to select the remaining individuals from that front. |\n",
+    "| **10. Loop or Terminate** | Repeat steps 4 to 9 until the stopping criterion is met. This could be a maximum number of generations, a maximum allowed computation time, or a desired quality of solution. |\n",
+    "\n",
+    "\n",
+    "\n",
+    "## selNSGA2 en DEAP"
    ]
   },
   {
@@ -24,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "52d101c1",
+   "id": "306ca2d8",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a035626a",
+   "id": "71518dc8",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "86eaa73c",
+   "id": "e09e6b02",
    "metadata": {},
    "outputs": [
     {
@@ -942,9 +981,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e482e10b",
+   "metadata": {},
+   "source": [
+    "## Ejercicio: optimizar otro par de funciones y graficar frente de Pareto."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f0e67cb",
+   "id": "b8bb635b",
    "metadata": {},
    "outputs": [],
    "source": []
