--- a/6_5_2_Optimizacion_multiobjetivo.ipynb
+++ b/6_5_2_Optimizacion_multiobjetivo.ipynb
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "306ca2d8",
+   "id": "77521825",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "71518dc8",
+   "id": "4d750358",
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e09e6b02",
+   "id": "e2a3a606",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e482e10b",
+   "id": "5db2a0c8",
    "metadata": {},
    "source": [
     "## Ejercicio: optimizar otro par de funciones y graficar frente de Pareto."
@@ -991,7 +991,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8bb635b",
+   "id": "8ad435ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "213f72f1",
+   "metadata": {},
+   "source": [
+    "### ¿A qué se refiere *eaMuPlusLambda*? Ver siguiente notebook, relacionada a estrategias evolutivas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21bd8e55",
    "metadata": {},
    "outputs": [],
    "source": []
