--- a/6_5_2_Optimizacion_multiobjetivo.ipynb
+++ b/6_5_2_Optimizacion_multiobjetivo.ipynb
@@ -29,6 +29,9 @@
     "![](https://i0.wp.com/oklahomaanalytics.com/wp-content/uploads/2017/10/fig4.png)\n",
     "\n",
     "![](https://raw.githubusercontent.com/igomezv/ComputoEvolutivo/main/img/crowding.png)\n",
+    "\n",
+    "Fuente de las figuras: Deb, K. (2011). Multi-objective optimisation using evolutionary algorithms: an introduction (pp. 3-34). Springer London. \n",
+    "\n",
     "| Step | Description |\n",
     "| ---- | ----------- |\n",
     "| **1. Initialization** | Generate an initial population of size `N` and evaluate the population. |\n",
@@ -63,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "77521825",
+   "id": "51ba9f98",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4d750358",
+   "id": "a4dd0d2c",
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e2a3a606",
+   "id": "173a9583",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5db2a0c8",
+   "id": "9a80b584",
    "metadata": {},
    "source": [
     "## Ejercicio: optimizar otro par de funciones y graficar frente de Pareto."
@@ -991,14 +994,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ad435ae",
+   "id": "e2ccb691",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "213f72f1",
+   "id": "467b1b7d",
    "metadata": {},
    "source": [
     "### ¿A qué se refiere *eaMuPlusLambda*? Ver siguiente notebook, relacionada a estrategias evolutivas."
@@ -1007,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21bd8e55",
+   "id": "f95814b1",
    "metadata": {},
    "outputs": [],
    "source": []
