--- a/6_5_2_Optimizacion_multiobjetivo.ipynb
+++ b/6_5_2_Optimizacion_multiobjetivo.ipynb
@@ -14,6 +14,9 @@
     "\n",
     "![](https://miro.medium.com/v2/resize:fit:640/format:webp/1*O0HrabCthxRdXR9nHzPrjQ.png)\n",
     "\n",
+    "![](https://miro.medium.com/v2/resize:fit:720/1*e_mLv5dpuQHAmfetxsdzew.gif)\n",
+    "Fuente de la imagen: https://medium.com/@hador0208/multi-objective-optimization-no-preference-methods-ex-vega-and-nsga-9110d94e0c29\n",
+    "\n",
     "### Problemas\n",
     "\n",
     "1. High computational complexity of nondominated sorting.\n",
@@ -21,6 +24,7 @@
     "2. Lack of elitism.\n",
     "\n",
     "3. Need for specifying the sharing parameter $\\sigma_{share}$.\n",
+    "\n",
     "\n",
     "## NGSA-II\n",
     "\n",
@@ -66,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "51ba9f98",
+   "id": "90d9dd28",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a4dd0d2c",
+   "id": "3d0040a3",
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "173a9583",
+   "id": "913e9712",
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a80b584",
+   "id": "f82811dd",
    "metadata": {},
    "source": [
     "## Ejercicio: optimizar otro par de funciones y graficar frente de Pareto."
@@ -994,14 +998,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2ccb691",
+   "id": "302b07de",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "467b1b7d",
+   "id": "9f1167d8",
    "metadata": {},
    "source": [
     "### ¿A qué se refiere *eaMuPlusLambda*? Ver siguiente notebook, relacionada a estrategias evolutivas."
@@ -1010,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f95814b1",
+   "id": "2ad0ad54",
    "metadata": {},
    "outputs": [],
    "source": []
