--- a/6_6_Estrategias_Evolutivas.ipynb
+++ b/6_6_Estrategias_Evolutivas.ipynb
@@ -16,13 +16,14 @@
     "\n",
     "Diferencias entre AG y EE:\n",
     "\n",
-    "   - **Origen e inspiración**: Los AG fueron desarrollados inicialmente en los Estados Unidos y se basan en una analogía con la evolución biológica y la genética mendeliana. Por otro lado, las EE fueron desarrolladas en Alemania y se basan más en la idea de estrategias de adaptación de las especies.\n",
     "\n",
-    "   - **Representación de las soluciones y operadores genéticos**: En AG, las soluciones son normalmente representadas como cadenas de bits, y los operadores de cruce y mutación se aplican a estos bits. En EE, las soluciones son representadas generalmente como vectores de números reales, y los operadores de mutación y cruce se aplican a estos números reales.\n",
+    "| Aspecto | Algoritmos Genéticos | Estrategias Evolutivas |\n",
+    "| ------- | -------------------- | ---------------------- |\n",
+    "| **Origen e inspiración** | Desarrollados en los Estados Unidos, basados en la evolución biológica y la genética mendeliana. | Desarrollados en Alemania, basados en estrategias de adaptación de las especies. |\n",
+    "| **Representación de las soluciones y operadores genéticos** | Las soluciones son normalmente representadas como cadenas de bits, y los operadores de cruce y mutación se aplican a estos bits. | Las soluciones son representadas generalmente como vectores de números reales, y los operadores de mutación y cruce se aplican a estos números reales. |\n",
+    "| **Selección de padres y supervivencia** | La selección de los padres para el cruce a menudo se realiza en función de la aptitud, y la nueva generación generalmente reemplaza completamente a la antigua generación. | Los padres y los hijos a menudo compiten entre sí para entrar en la próxima generación, y la selección de padres para la reproducción no siempre se basa en la aptitud. |\n",
+    "| **Adaptación de parámetros** | Estos parámetros suelen ser fijos o adaptados de acuerdo a algún criterio externo. | Una característica única de algunas EE es la auto-adaptación de los parámetros, como las tasas de mutación. |\n",
     "\n",
-    "   - **Selección de padres y supervivencia**: En AG, la selección de los padres para el cruce a menudo se realiza en función de la aptitud, y la nueva generación generalmente reemplaza completamente a la antigua generación. En EE, los padres y los hijos a menudo compiten entre sí para entrar en la próxima generación, y la selección de padres para la reproducción no siempre se basa en la aptitud.\n",
-    "\n",
-    "   - **Adaptación de parámetros**: Una característica única de algunas EE es la auto-adaptación de los parámetros, como las tasas de mutación. En AG, estos parámetros suelen ser fijos o adaptados de acuerdo a algún criterio externo.\n",
     "\n",
     "Las Estrategias Evolutivas (EE):\n",
     "\n",
