--- a/6_6_Programación_genética.ipynb
+++ b/6_6_Programación_genética.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7495ede7",
+   "id": "299b6d9d",
    "metadata": {},
    "source": [
-    "# Programación genética"
+    "# Programación genética\n",
+    "\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/7/77/Genetic_Program_Tree.png)\n",
+    "Fuente: wikipedia\n",
+    "\n",
+    "![](https://www.researchgate.net/profile/Mohammed-El-Telbany/publication/4113357/figure/fig1/AS:279938642006020@1443753981702/Genetic-programming-operators-a-mutation-b-crossover.png)\n",
+    "Fuente: researchgate"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "af5cfc0a",
+   "id": "5a6b31d5",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "36e56b79",
+   "id": "d72ef442",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a77309e6",
+   "id": "61735cf5",
    "metadata": {},
    "outputs": [
     {
@@ -84,20 +90,17 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7b06018c",
+   "id": "144f6c9d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "y_train = y_train.reshape(100,)\n",
-    "\n"
+    "y_train = y_train.reshape(100,)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7f5c6dd9",
+   "id": "8b4c234b",
    "metadata": {},
    "outputs": [
     {
@@ -158,22 +161,19 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "est_gp = SymbolicRegressor(population_size=500,\n",
     "                           generations=30, stopping_criteria=0.01,\n",
     "                           p_crossover=0.7, p_subtree_mutation=0.1,\n",
     "                           p_hoist_mutation=0.05, p_point_mutation=0.1,\n",
     "                           max_samples=0.9, verbose=1,\n",
     "                           parsimony_coefficient=0.01, random_state=0)\n",
-    "est_gp.fit(X_train, y_train)\n",
-    "\n"
+    "est_gp.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0629187f",
+   "id": "5a099453",
    "metadata": {
     "scrolled": true
    },
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f37e522",
+   "id": "84fc42b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,6 +202,22 @@
     "graph.render('images/ex1_child', format='png', cleanup=True)\n",
     "graph"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a5267f2",
+   "metadata": {},
+   "source": [
+    "### Ejercicio: Generar datos con ruido a partir de una función, proponer otras gramáticas y correr el algoritmo de programación genética."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fc8fc01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
