--- a/6_6_Nichos.ipynb
+++ b/6_6_Nichos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d8c68666",
+   "id": "f3ee8daf",
    "metadata": {},
    "source": [
     "# Técnica de nichos\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cdae6166",
+   "id": "5f9ce902",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "70902bc6",
+   "id": "32ad9dd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d6df37d4",
+   "id": "51e4c9eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f039cf61",
+   "id": "1c01c211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "46c7a226",
+   "id": "4ba8a0f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f03ff56b",
+   "id": "7a020418",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7d62b7d6",
+   "id": "1d168ef2",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2ac7fd7d",
+   "id": "ffd47e91",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "612e71f1",
+   "id": "28eb95e7",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,6 @@
     }
    ],
    "source": [
-    "\n",
     "# plot solution locations on x-y plane:\n",
     "plt.figure(1)\n",
     "globalMaxima = [[0.3, 0.3], [0.7, 0.3], [0.3, 0.7], [0.7, 0.7]]\n",
@@ -718,6 +717,22 @@
     "\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "176ade88",
+   "metadata": {},
+   "source": [
+    "## Ejercicio: Probar con otra función multimodal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f40b7060",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
